Remove (comment) optionals for dependency evaluation in eclipse, removing IDE specific configs